@@ -39,6 +39,9 @@
 # print daemon settings (NO | YES/NO)
 #settings=YES
 
+# allow only connection from localhost
+#localhost=YES
+
 # retry getting bus (3 | max: 10)
 #get_retry=3
 
