@@ -1,6 +1,9 @@
 ebus Daemon (ebusd) - NEWS
 ==========================
 
+2013-05-16:
+* Added ability to restrict tcp connection to localhost. (thx Alexey Ozerov)
+
 2013-04-27:
 * Improved csv files read in a way that ebus parts are not case sensitive.
 
