@@ -1,6 +1,9 @@
 ebus Daemon (ebusd) - ChangeLog
 ===============================
 
+2013-05-16:
+* Added ability to restrict tcp connection to localhost. (thx Alexey Ozerov)
+
 2013-05-05:
 * Added function checks whether the FD is still a valid serial device.
 
